# tracker_MIL

./: CMakeLists.txt  x  x.cpp
doc/: trackerMIL.vsdx
include/BOOSTING/: bk_trackerAdaBoostingClassifier.hpp  common_includes.hpp  feature.hpp  roiSelector.hpp  trackerAdaBoosting.hpp  trackerAdaBoostingClassifier.hpp  trackerAdaBoostingModel.hpp  trackerFeature.hpp  trackerFeatureSet.hpp  trackerModel.hpp  trackerSampler.hpp  trackerSamplerAlgorithm.hpp  trackerStateEstimator.hpp  trackerTargetState.hpp
include/BOOSTING_DIRECTION/: common_includes.hpp  directionAdaBoosting.hpp  feature.hpp  trackerAdaBoostingClassifier.hpp  trackerFeature.hpp
include/MIL/: backup_trackerStateEstimatorMILBoosting.hpp  common_includes.hpp  feature.hpp  roiSelector.hpp  trackerFeature.hpp  trackerFeatureSet.hpp  trackerMIL.hpp  trackerMILClassifier.hpp  trackerMILModel.hpp  trackerModel.hpp  trackerSampler.hpp  trackerSamplerAlgorithm.hpp  trackerStateEstimator.hpp  trackerStateEstimatorMILBoosting.hpp  trackerTargetState.hpp
include/ML/: StatModel.hpp  TrainData.hpp  common_includes.hpp
src/: CMakeLists.txt  backup_trackerStateEstimatorMILBoosting.cpp  feature.cpp  roiSelector.cpp  trackerFeature.cpp  trackerMIL.cpp  trackerMILClassifier.cpp  trackerMILModel.cpp  trackerModel.cpp  trackerSampler.cpp  trackerSamplerAlgorithm.cpp  trackerStateEstimator.cpp  trackerStateEstimatorMILBoosting.cpp
src/BOOSTING/: CMakeLists.txt  bk_trackerAdaBoostingClassifier.cpp  feature.cpp  trackerAdaBoosting.cpp  trackerAdaBoostingClassifier.cpp  trackerAdaBoostingModel.cpp  trackerFeature.cpp  trackerFeatureSet.cpp  trackerModel.cpp  trackerSampler.cpp  trackerSamplerAlgorithm.cpp  trackerStateEstimator.cpp
src/BOOSTING_DIRECTION/: CMakeLists.txt  directionAdaBoosting.cpp  feature.cpp  trackerAdaBoostingClassifier.cpp  trackerFeature.cpp
src/MIL/: trackerFeatureSet.cpp  trackerMIL.cpp  trackerSamplerAlgorithm.cpp  trackerStateEstimator.cpp
src/ML/: TrainData.cpp
test/: CMakeLists.txt  hough.cpp  tracker.cpp  trackerPosture.cpp  trackerPosture_AdaBoosting.cpp  tracker_AdaBoosting.cpp  tracker_MILBoosting.cpp
test_draft/: CMakeLists.txt  hough.cpp  trackerPose_AdaBoosting_Hough.cpp  trackerPosture.cpp
